Use compact object headers with JDK25+ (#20392)
Signed-off-by: Andrew Ross <andrross@amazon.com>